--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,6 +6,13 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
+/* Custom */
+h2.majormiddle {
+	border-bottom: solid 1px #ffffff;
+	float: center;
+	align: center;
+	text-align: center;
+}
 
 /* Reset */
 
